Experiment with new color scheme

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -49,21 +49,25 @@
 
             <p>Now, we will look at how to form full sentences in Pashto.</p>
 
-            <h2>How Do Sentences Form?</h2>
+            <div class="bg-dark text-white">
 
-            <p>Words are separated by spaces. Pashto has the following puncutation marks that are very similar to the
-                ones found in English:
-            </p>
+                <h2>How Do Sentences Form?</h2>
 
-            <div class="d-flex justify-content-end flex-row-reverse gap-1 my-3">
-                <img class="img-thumbnail" src="/assets/period.png" alt="Period">
-                <img class="img-thumbnail" src="/assets/question_mark.png" alt="Question mark">
-                <img class="img-thumbnail" src="/assets/exclamation_mark.png" alt="Exclamation mark">
+                <p>Words are separated by spaces. Pashto has the following puncutation marks that are very similar to the
+                    ones found in English:
+                </p>
+
+                <div class="d-flex justify-content-end flex-row-reverse gap-1 my-3">
+                    <img class="img-thumbnail" src="/assets/period.png" alt="Period">
+                    <img class="img-thumbnail" src="/assets/question_mark.png" alt="Question mark">
+                    <img class="img-thumbnail" src="/assets/exclamation_mark.png" alt="Exclamation mark">
+                </div>
+
+                <p>In addition, it is important to remember that Pashto is written from right to left. (The only
+                    exception stems from numbers, as they are written from left to right.)
+                </p>
+
             </div>
-
-            <p>In addition, it is important to remember that Pashto is written from right to left. (The only
-                exception stems from numbers, as they are written from left to right.)
-            </p>
 
             <h2>Sentence Structure</h2>
 
@@ -152,6 +156,14 @@
                 <li>
                     <span class="text-pashto">کله <span class="text-primary">ځي</span>؟</span> - When is he/she/it <span class="text-primary">coming</span>? / When does he/she/it <span class="text-primary">come</span>?
                 </li>
+
+            </ul>
+
+            <h2>Multiple Meanings?</h2>
+
+            <p>As you might have noticed, some of the words and sentences from our examples have multiple meanings! This can happen a decent bit
+                in Pashto. Luckily, context will usually clarify the correct meaning. In future lessons, we will explore this concept in more depth.
+            </p>
 
         </div>
         
