--- a/pashto/lessons/index.html
+++ b/pashto/lessons/index.html
@@ -48,7 +48,7 @@
             <p>Welcome to the page of Pashto lessons! Your journey starts here towards learning this mysterious yet beautiful language.
             Look below to get started!</p>
 
-            <h2><a href="alphabet/">The Alphabet</a></h2>
+            <h2><a href="alphabet/">The Pashto Alphabet</a></h2>
             <h2><a href="diacritics/">Diacritics</a></h2>
             <h2><a href="forming-words/">Forming Words</a></h2>
             <h2><a href="forming-sentences/">Forming Sentences</a></h2>
