Experiment with new color scheme

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -43,7 +43,7 @@
             </ol>
         </nav>
 
-        <div class="container-fluid">
+        <div class="bg-dark text-white p-3 rounded-3 shadow my-3">
 
             <h1 class="text-center">Forming Sentences</h1>
 
@@ -97,12 +97,16 @@
 
             </ul>
 
-            <h2>Wait, This Doesn't Look Familiar!</h2>
+            <div class="bg-dark text-white p-3 rounded-3 shadow my-3">
 
-            <p>Don't worry! These examples were only meant to introduce you to the basic sentence structure of Pashto.
-                You will learn more of these vocabulary words later on. For now, just recognize the SOV structure and
-                how the words work together in the above sentences to make that structure work.
-            </p>
+                <h2>Wait, This Doesn't Look Familiar!</h2>
+
+                <p>Don't worry! These examples were only meant to introduce you to the basic sentence structure of Pashto.
+                    You will learn more of these vocabulary words later on. For now, just recognize the SOV structure and
+                    how the words work together in the above sentences to make that structure work.
+                </p>
+
+            </div>
 
             <h2>Interrogative Sentences</h2>
 
