Experiment with new color scheme

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -43,13 +43,13 @@
             </ol>
         </nav>
 
-        <div class="bg-dark text-white p-3 rounded-3 shadow my-3">
+        <div class="container-fluid">
 
             <h1 class="text-center">Forming Sentences</h1>
 
             <p>Now, we will look at how to form full sentences in Pashto.</p>
 
-            <div class="bg-dark text-white">
+            <div class="bg-dark text-white p-3 rounded-3 shadow my-3">
 
                 <h2>How Do Sentences Form?</h2>
 
