Experiment with new color scheme

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -43,13 +43,13 @@
             </ol>
         </nav>
 
-        <div class="container-fluid">
+        <div class="container-fluid bg-pak">
 
             <h1 class="text-center">Forming Sentences</h1>
 
             <p>Now, we will look at how to form full sentences in Pashto.</p>
 
-            <div class="bg-dark text-white p-3 rounded-3 shadow my-3">
+            <div class="bg-light p-3 rounded-3 shadow my-3">
 
                 <h2>How Do Sentences Form?</h2>
 
@@ -97,7 +97,7 @@
 
             </ul>
 
-            <div class="bg-dark text-white p-3 rounded-3 shadow my-3">
+            <div class="bg-light p-3 rounded-3 shadow my-3">
 
                 <h2>Wait, This Doesn't Look Familiar!</h2>
 
@@ -163,11 +163,15 @@
 
             </ul>
 
-            <h2>Multiple Meanings?</h2>
+            <div class="bg-light p-3 rounded-3 shadow my-3">
 
-            <p>As you might have noticed, some of the words and sentences from our examples have multiple meanings! This can happen a decent bit
-                in Pashto. Luckily, context will usually clarify the correct meaning. In future lessons, we will explore this concept in more depth.
-            </p>
+                <h2>Multiple Meanings?</h2>
+
+                <p>As you might have noticed, some of the words and sentences from our examples have multiple meanings! This can happen a decent bit
+                    in Pashto. Luckily, context will usually clarify the correct meaning. In future lessons, we will explore this concept in more depth.
+                </p>
+
+            </div>
 
         </div>
         
