Experiment with new color scheme

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -43,13 +43,13 @@
             </ol>
         </nav>
 
-        <div class="container-fluid bg-sky-blue">
+        <div class="container-fluid bg-first-color">
 
             <h1 class="text-center">Forming Sentences</h1>
 
             <p>Now, we will look at how to form full sentences in Pashto.</p>
 
-            <div class="bg-dark p-3 rounded-3 shadow my-3">
+            <div class="bg-second-color p-3 rounded-3 shadow my-3">
 
                 <h2>How Do Sentences Form?</h2>
 
@@ -97,7 +97,7 @@
 
             </ul>
 
-            <div class="bg-dark p-3 rounded-3 shadow my-3">
+            <div class="bg-second-color p-3 rounded-3 shadow my-3">
 
                 <h2>Wait, This Doesn't Look Familiar!</h2>
 
@@ -163,7 +163,7 @@
 
             </ul>
 
-            <div class="bg-dark p-3 rounded-3 shadow my-3">
+            <div class="bg-second-color p-3 rounded-3 shadow my-3">
 
                 <h2>Multiple Meanings?</h2>
 
