Experiment with new color scheme

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -45,9 +45,13 @@
 
         <div class="container-fluid bg-first-color">
 
-            <h1 class="text-center">Forming Sentences</h1>
+            <div class="w-100 rounded-3">
 
-            <p>Now, we will look at how to form full sentences in Pashto.</p>
+                <h1 class="text-center pt-3">Forming Sentences</h1>
+
+                <p>Now, we will look at how to form full sentences in Pashto.</p>
+
+            </div>
 
             <div class="bg-second-color p-3 rounded-3 shadow my-3">
 
@@ -69,33 +73,37 @@
 
             </div>
 
-            <h2>Sentence Structure</h2>
+            <div class="w-100 rounded-3">
 
-            <p>Sentences in Pashto follow the SOV (subject-object-verb) structure. This is different from the
-                familiar SVO (subject-verb-object) structure that English uses.
-            </p>
+                <h2>Sentence Structure</h2>
 
-            <h3>Examples</h3>
+                <p>Sentences in Pashto follow the SOV (subject-object-verb) structure. This is different from the
+                    familiar SVO (subject-verb-object) structure that English uses.
+                </p>
 
-            <p>Below is the color code that I used.</p>
+                <h3>Examples</h3>
 
-            <ul>
-                <li class="text-danger">Subject</li>
-                <li class="text-success">Object</li>
-                <li class="text-primary">Verb</li>
-            </ul>
+                <p>Below is the color code that I used.</p>
 
-            <ul class="fs-3">
+                <ul>
+                    <li class="text-danger">Subject</li>
+                    <li class="text-success">Object</li>
+                    <li class="text-primary">Verb</li>
+                </ul>
 
-                <li>
-                    <span class="text-pashto"><span class="text-danger">زه</span> <span class="text-success">اوبه</span> <span class="text-primary">څښم</span>.</span> - <span class="text-danger">I</span> <span class="text-primary">drink</span> <span class="text-success">water</span>.
-                </li>
+                <ul class="fs-3">
 
-                <li>
-                    <span class="text-pashto"><span class="text-danger">ته</span> <span class="text-success">۲۶ کتابونه</span> <span class="text-primary">لرې</span>.</span> - <span class="text-danger">You</span> <span class="text-primary">have</span> <span class="text-success">26 books</span>.
-                </li>
+                    <li>
+                        <span class="text-pashto"><span class="text-danger">زه</span> <span class="text-success">اوبه</span> <span class="text-primary">څښم</span>.</span> - <span class="text-danger">I</span> <span class="text-primary">drink</span> <span class="text-success">water</span>.
+                    </li>
 
-            </ul>
+                    <li>
+                        <span class="text-pashto"><span class="text-danger">ته</span> <span class="text-success">۲۶ کتابونه</span> <span class="text-primary">لرې</span>.</span> - <span class="text-danger">You</span> <span class="text-primary">have</span> <span class="text-success">26 books</span>.
+                    </li>
+
+                </ul>
+
+            </div>
 
             <div class="bg-second-color p-3 rounded-3 shadow my-3">
 
@@ -108,60 +116,64 @@
 
             </div>
 
-            <h2>Interrogative Sentences</h2>
+            <div class="w-100 rounded-3">
 
-            <p>In Pashto, interrogative sentences generally follow the same word order as other sentences in Pashto: SOV.
-                Here are some common question words in Pashto:
-            </p>
+                <h2>Interrogative Sentences</h2>
 
-            <ul class="fs-3">
-                <li><span class="text-pashto">څنګه؟</span> - How?</li>
-                <li><span class="text-pashto">څوک؟</span> - Who?</li>
-                <li><span class="text-pashto">څه؟</span> - What?</li>
-                <li><span class="text-pashto">ولې؟</span> - Why?</li>
-                <li><span class="text-pashto">چېرته؟</span> - Where?</li>
-                <li><span class="text-pashto">کله؟</span> - When?</li>
-            </ul>
+                <p>In Pashto, interrogative sentences generally follow the same word order as other sentences in Pashto: SOV.
+                    Here are some common question words in Pashto:
+                </p>
 
-            <p>Generally, the following rules apply when forming interrogative sentences in Pashto:</p>
+                <ul class="fs-3">
+                    <li><span class="text-pashto">څنګه؟</span> - How?</li>
+                    <li><span class="text-pashto">څوک؟</span> - Who?</li>
+                    <li><span class="text-pashto">څه؟</span> - What?</li>
+                    <li><span class="text-pashto">ولې؟</span> - Why?</li>
+                    <li><span class="text-pashto">چېرته؟</span> - Where?</li>
+                    <li><span class="text-pashto">کله؟</span> - When?</li>
+                </ul>
 
-            <ul>
-                <li>If there is a subject, put it first before other words. The question word will follow the subject.</li>
-                <li>If the subject is the question word itself, it should still be first in the sentence.</li>
-                <li>If the subject is omitted, the question word will be first.</li>
-            </ul>
+                <p>Generally, the following rules apply when forming interrogative sentences in Pashto:</p>
 
-            <h3>Examples (Subject First, Question Word After)</h3>
+                <ul>
+                    <li>If there is a subject, put it first before other words. The question word will follow the subject.</li>
+                    <li>If the subject is the question word itself, it should still be first in the sentence.</li>
+                    <li>If the subject is omitted, the question word will be first.</li>
+                </ul>
 
-            <ul class="fs-3">
+                <h3>Examples (Subject First, Question Word After)</h3>
 
-                <li>
-                    <span class="text-pashto"><span class="text-danger">تا</span> ولې <span class="text-success">کتاب</span> <span class="text-primary">ولیدلو</span>؟</span> - Why did <span class="text-danger">you</span> <span class="text-primary">see</span> <span class="text-success">the book</span>?
-                </li>
+                <ul class="fs-3">
 
-                <li>
-                    <span class="text-pashto"><span class="text-danger">هغه</span> چېرته <span class="text-primary">وه</span>؟</span> - Where <span class="text-primary">was</span> <span class="text-danger">she</span>?
-                </li>
+                    <li>
+                        <span class="text-pashto"><span class="text-danger">تا</span> ولې <span class="text-success">کتاب</span> <span class="text-primary">ولیدلو</span>؟</span> - Why did <span class="text-danger">you</span> <span class="text-primary">see</span> <span class="text-success">the book</span>?
+                    </li>
 
-                <li>
-                    <span class="text-pashto"><span class="text-danger">تا</span> څه <span class="text-primary">کول</span>؟</span> - What were <span class="text-danger">you</span> <span class="text-primary">doing</span>?
-                </li>
+                    <li>
+                        <span class="text-pashto"><span class="text-danger">هغه</span> چېرته <span class="text-primary">وه</span>؟</span> - Where <span class="text-primary">was</span> <span class="text-danger">she</span>?
+                    </li>
 
-            </ul>
+                    <li>
+                        <span class="text-pashto"><span class="text-danger">تا</span> څه <span class="text-primary">کول</span>؟</span> - What were <span class="text-danger">you</span> <span class="text-primary">doing</span>?
+                    </li>
 
-            <h3>Examples (No Subject, Question Word First)</h3>
+                </ul>
 
-            <ul class="fs-3">
+                <h3>Examples (No Subject, Question Word First)</h3>
 
-                <li>
-                    <span class="text-pashto">څه <span class="text-primary">کوې</span>؟</span> - What are you <span class="text-primary">doing</span>? / What do you <span class="text-primary">do</span>?
-                </li>
+                <ul class="fs-3">
 
-                <li>
-                    <span class="text-pashto">کله <span class="text-primary">ځي</span>؟</span> - When is he/she/it <span class="text-primary">coming</span>? / When does he/she/it <span class="text-primary">come</span>?
-                </li>
+                    <li>
+                        <span class="text-pashto">څه <span class="text-primary">کوې</span>؟</span> - What are you <span class="text-primary">doing</span>? / What do you <span class="text-primary">do</span>?
+                    </li>
 
-            </ul>
+                    <li>
+                        <span class="text-pashto">کله <span class="text-primary">ځي</span>؟</span> - When is he/she/it <span class="text-primary">coming</span>? / When does he/she/it <span class="text-primary">come</span>?
+                    </li>
+
+                </ul>
+
+            </div>
 
             <div class="bg-second-color p-3 rounded-3 shadow my-3">
 
