Experiment with new color scheme

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -43,9 +43,9 @@
             </ol>
         </nav>
 
-        <div class="container-fluid bg-first-color">
+        <div class="container-fluid p-0 bg-first-color text-white">
 
-            <div class="w-100 rounded-3">
+            <div class="p-3">
 
                 <h1 class="text-center pt-3">Forming Sentences</h1>
 
@@ -53,7 +53,7 @@
 
             </div>
 
-            <div class="bg-second-color p-3 rounded-3 shadow my-3">
+            <div class="bg-second-color text-first-color p-3 rounded-3 shadow">
 
                 <h2>How Do Sentences Form?</h2>
 
@@ -61,7 +61,7 @@
                     ones found in English:
                 </p>
 
-                <div class="d-flex justify-content-end flex-row-reverse gap-1 my-3">
+                <div class="d-flex justify-content-end flex-row-reverse gap-1">
                     <img class="img-thumbnail" src="/assets/period.png" alt="Period">
                     <img class="img-thumbnail" src="/assets/question_mark.png" alt="Question mark">
                     <img class="img-thumbnail" src="/assets/exclamation_mark.png" alt="Exclamation mark">
@@ -73,7 +73,7 @@
 
             </div>
 
-            <div class="w-100 rounded-3">
+            <div class="p-3">
 
                 <h2>Sentence Structure</h2>
 
@@ -105,7 +105,7 @@
 
             </div>
 
-            <div class="bg-second-color p-3 rounded-3 shadow my-3">
+            <div class="bg-second-color text-first-color p-3 rounded-3 shadow">
 
                 <h2>Wait, This Doesn't Look Familiar!</h2>
 
@@ -116,7 +116,7 @@
 
             </div>
 
-            <div class="w-100 rounded-3">
+            <div class="p-3">
 
                 <h2>Interrogative Sentences</h2>
 
@@ -175,7 +175,7 @@
 
             </div>
 
-            <div class="bg-second-color p-3 rounded-3 shadow my-3">
+            <div class="bg-second-color text-first-color p-3 rounded-3 shadow">
 
                 <h2>Multiple Meanings?</h2>
 
