Experiment with new color scheme

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -53,7 +53,7 @@
 
             </div>
 
-            <div class="bg-second-color text-first-color p-3 rounded-3 shadow">
+            <div class="bg-second-color text-first-color p-3">
 
                 <h2>How Do Sentences Form?</h2>
 
@@ -105,7 +105,7 @@
 
             </div>
 
-            <div class="bg-second-color text-first-color p-3 rounded-3 shadow">
+            <div class="bg-second-color text-first-color p-3">
 
                 <h2>Wait, This Doesn't Look Familiar!</h2>
 
@@ -175,7 +175,7 @@
 
             </div>
 
-            <div class="bg-second-color text-first-color p-3 rounded-3 shadow">
+            <div class="bg-second-color text-first-color p-3">
 
                 <h2>Multiple Meanings?</h2>
 
