--- a/pashto/lessons/diacritics/index.html
+++ b/pashto/lessons/diacritics/index.html
@@ -43,66 +43,79 @@
             </ol>
         </nav>
 
-        <div class="container-fluid">
+        <div class="container-fluid p-0 bg-first-color text-white">
 
             <h1 class="text-center">Diacritics</h1>
 
-            <h2>What Are Diacritics?</h2>
+            <div class="p-3">
 
-            <p>In linguistics, diacritics are marks that are added to letters to clarify how they are pronounced.
-                This can be helpful in languages like Pashto that are written in such a way that the pronunciation
-                of words might not be obvious unless one already knows how to pronounce them. While diacritics
-                are usually not used in common Pashto writing, they can sometimes be seen here and there, and
-                they are very useful in works like dictionaries to eliminate confusion about how to pronounce words.</p>
+                <h2>What Are Diacritics?</h2>
 
-            <h2>The Pashto Diacritics</h2>
-
-            <p>Below are the diacritics of Pashto. Since Pashto is written from 
-                right to left, I have similarly arranged the diacritics from right to left below. The colored image shows
-                how I have labeled the letters.
-            </p>
-
-            <img class="img-thumbnail" src="/assets/diacritic_example.png" alt="Example of how I arranged the diacritics">
-
-            <div class="d-flex flex-wrap justify-content-end flex-row-reverse gap-1 my-3">
-                <img class="img-thumbnail" src="/assets/zwar.png" alt="zwar">
-                <img class="img-thumbnail" src="/assets/zwarakay.png" alt="zwarakay">
-                <img class="img-thumbnail" src="/assets/zer.png" alt="zer">
-                <img class="img-thumbnail" src="/assets/pex.png" alt="pex">
+                <p>In linguistics, diacritics are marks that are added to letters to clarify how they are pronounced.
+                    This can be helpful in languages like Pashto that are written in such a way that the pronunciation
+                    of words might not be obvious unless one already knows how to pronounce them. While diacritics
+                    are usually not used in common Pashto writing, they can sometimes be seen here and there, and
+                    they are very useful in works like dictionaries to eliminate confusion about how to pronounce words.
+                </p>
+            
             </div>
 
-            <h2>How Do They Work?</h2>
+            <div class="bg-second-color text-first-color p-3">
 
-            <p>These diacritics are basically placed on letters in different ways to show their pronunciations. In the images,
-                the dotted circles are where letters would be placed for each diacritic. To pronounce a letter with a diacritic,
-                the sound of the letter itself is pronounced first, and then the diacritic's sound follows shortly after. (If you
-                are unfamiliar with the alphabets and their sounds, I have a <a href="/pashto/lessons/alphabet/">lesson</a> on that.)
-            </p>
+                <h2>The Pashto Diacritics</h2>
 
-            <p>Feel free to try out the examples below and guess what they should sound like.</p>
+                <p>Below are the diacritics of Pashto. Since Pashto is written from 
+                    right to left, I have similarly arranged the diacritics from right to left below. The colored image shows
+                    how I have labeled the letters.
+                </p>
 
-            <div class="d-flex flex-wrap gap-1 my-3">
+                <img class="img-thumbnail" src="/assets/diacritic_example.png" alt="Example of how I arranged the diacritics">
 
-                <div class="d-flex flex-wrap justify-content-center flex-column gap-1">
-                    <img class="img-thumbnail" src="/assets/diacritic_q1.png" alt="Question 1">
-                    <a class="btn btn-primary my-3" data-bs-toggle="collapse" href="#diacritic_q1" role="button" aria-expanded="false" aria-controls="diacritic_q1" onclick="diacritic_answer1()">Answer</a>
-                </div>
-
-                <div class="d-flex flex-wrap justify-content-center flex-column gap-1">
-                    <img class="img-thumbnail" src="/assets/diacritic_q2.png" alt="Question 2">
-                    <a class="btn btn-primary my-3" data-bs-toggle="collapse" href="#diacritic_q2" role="button" aria-expanded="false" aria-controls="diacritic_q2" onclick="diacritic_answer2()">Answer</a>
+                <div class="d-flex flex-wrap justify-content-end flex-row-reverse gap-1 my-3">
+                    <img class="img-thumbnail" src="/assets/zwar.png" alt="zwar">
+                    <img class="img-thumbnail" src="/assets/zwarakay.png" alt="zwarakay">
+                    <img class="img-thumbnail" src="/assets/zer.png" alt="zer">
+                    <img class="img-thumbnail" src="/assets/pex.png" alt="pex">
                 </div>
 
             </div>
 
-            <div class="d-flex flex-wrap gap-1 my-3">
+            <div class="p-3">
 
-                <div class="collapse" id="diacritic_q1">
-                    <img class="img-thumbnail" src="/assets/diacritic_a1.png" alt="Answer 1">
+                <h2>How Do They Work?</h2>
+
+                <p>These diacritics are basically placed on letters in different ways to show their pronunciations. In the images,
+                    the dotted circles are where letters would be placed for each diacritic. To pronounce a letter with a diacritic,
+                    the sound of the letter itself is pronounced first, and then the diacritic's sound follows shortly after. (If you
+                    are unfamiliar with the alphabets and their sounds, I have a <a href="/pashto/lessons/alphabet/">lesson</a> on that.)
+                </p>
+
+                <p>Feel free to try out the examples below and guess what they should sound like.</p>
+
+                <div class="d-flex flex-wrap gap-1 my-3">
+
+                    <div class="d-flex flex-wrap justify-content-center flex-column gap-1">
+                        <img class="img-thumbnail" src="/assets/diacritic_q1.png" alt="Question 1">
+                        <a class="btn btn-primary my-3" data-bs-toggle="collapse" href="#diacritic_q1" role="button" aria-expanded="false" aria-controls="diacritic_q1" onclick="diacritic_answer1()">Answer</a>
+                    </div>
+
+                    <div class="d-flex flex-wrap justify-content-center flex-column gap-1">
+                        <img class="img-thumbnail" src="/assets/diacritic_q2.png" alt="Question 2">
+                        <a class="btn btn-primary my-3" data-bs-toggle="collapse" href="#diacritic_q2" role="button" aria-expanded="false" aria-controls="diacritic_q2" onclick="diacritic_answer2()">Answer</a>
+                    </div>
+
                 </div>
 
-                <div class="collapse" id="diacritic_q2">
-                    <img class="img-thumbnail" src="/assets/diacritic_a2.png" alt="Answer 2">
+                <div class="d-flex flex-wrap gap-1 my-3">
+
+                    <div class="collapse" id="diacritic_q1">
+                        <img class="img-thumbnail" src="/assets/diacritic_a1.png" alt="Answer 1">
+                    </div>
+
+                    <div class="collapse" id="diacritic_q2">
+                        <img class="img-thumbnail" src="/assets/diacritic_a2.png" alt="Answer 2">
+                    </div>
+
                 </div>
 
             </div>
