--- a/pashto/lessons/diacritics/index.html
+++ b/pashto/lessons/diacritics/index.html
@@ -45,7 +45,7 @@
 
         <div class="container-fluid p-0 bg-first-color text-white">
 
-            <h1 class="text-center">Diacritics</h1>
+            <h1 class="text-center pt-3">Diacritics</h1>
 
             <div class="p-3">
 
