Add CSS rule to not repeat background

--- a/pashto/index.html
+++ b/pashto/index.html
@@ -17,6 +17,7 @@
                 background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/assets/mohammad-husaini-9UZ8sOnrnrs-unsplash.jpg');
                 background-size: cover;
                 background-position: center;
+                background-repeat: no-repeat;
             }
         </style>
     </head>
