Add IPA pronunciations

--- a/pashto/lessons/forming-sentences/index.html
+++ b/pashto/lessons/forming-sentences/index.html
@@ -67,7 +67,7 @@
                     <img class="img-thumbnail" src="/assets/exclamation_mark.png" alt="Exclamation mark">
                 </div>
 
-                <p>In addition, it is important to remember that Pashto is written from right to left. (The only
+                <p class="mt-3">In addition, it is important to remember that Pashto is written from right to left. (The only
                     exception stems from numbers, as they are written from left to right.)
                 </p>
 
@@ -97,9 +97,16 @@
                         <span class="text-pashto"><span class="text-danger">زه</span> <span class="text-success">اوبه</span> <span class="text-primary">څښم</span>.</span> - <span class="text-danger">I</span> <span class="text-primary">drink</span> <span class="text-success">water</span>.
                     </li>
 
+                    <ul class="fs-3">
+                        <li><b>[zə u'bə t͡sxəm]</b></li>
+                    </ul>
+
                     <li>
                         <span class="text-pashto"><span class="text-danger">ته</span> <span class="text-success">۲۶ کتابونه</span> <span class="text-primary">لرې</span>.</span> - <span class="text-danger">You</span> <span class="text-primary">have</span> <span class="text-success">26 books</span>.
                     </li>
+
+                    <ul class="fs-3">
+                        <li><b>[t̪ə 'ʃpəɡ.wiʃt̪ kɪ.tɑ'bu.na la're]</b></li>
 
                 </ul>
 
