Experiment with new color scheme

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -43,26 +43,33 @@
             </ol>
         </nav>
 
-        <div class="container-fluid">
-            <h1 class="text-center">The Pashto Alphabet</h1>
+        <div class="container-fluid p-0 bg-first-color text-white">
 
-            <div class="d-flex flex-wrap flex-row mb-5">
-                <p style="max-width: 86%;">The alphabet of Pashto is based on a modified version of the Arabic script. It has all of the base characters
-                        that you would find in the Arabic alphabet, and on top of that, it has additional letters exclusive to
-                        languages such as Pashto. Since Pashto has a number of different dialects, some letters can have more than
-                        one acceptable pronunciation. (I have included the different possible pronunciations below the letters.) The
-                        pronunciation depends on which dialect you are speaking. However, all of the letters are written the same way
-                        across all dialects. Below are the alphabets that make up the Pashto alphabet. Since Pashto is written from
-                        right to left, I have similarly arranged the letters from right to left below. The colored image shows
-                        how I have labeled the letters.
-                </p>
+            <div class="p-3">
 
-                <img class="img-thumbnail" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
+                <h1 class="text-center mt-3">The Pashto Alphabet</h1>
+
+                    <div class="d-flex flex-wrap flex-row mb-5">
+
+                        <p style="max-width: 86%;">The alphabet of Pashto is based on a modified version of the Arabic script. It has all of the base characters
+                                that you would find in the Arabic alphabet, and on top of that, it has additional letters exclusive to
+                                languages such as Pashto. Since Pashto has a number of different dialects, some letters can have more than
+                                one acceptable pronunciation. (I have included the different possible pronunciations below the letters.) The
+                                pronunciation depends on which dialect you are speaking. However, all of the letters are written the same way
+                                across all dialects. Below are the alphabets that make up the Pashto alphabet. Since Pashto is written from
+                                right to left, I have similarly arranged the letters from right to left below. The colored image shows
+                                how I have labeled the letters.
+                        </p>
+
+                        <img class="img-thumbnail" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
+
+                    </div>
+
             </div>
 
             <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#isolated" aria-expanded="false" aria-controls="isolated">Isolated Form</button>
 
-            <div class="collapse" id="isolated">
+            <div class="collapse bg-second-color p-3" id="isolated">
                 <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1 mb-5">
                     <img class="img-thumbnail" src="/assets/alif_isolated.png" alt="alif">
                     <img class="img-thumbnail" src="/assets/be_isolated.png" alt="be">
@@ -113,7 +120,7 @@
 
             <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#initial" aria-expanded="false" aria-controls="initial">Initial Form</button>
 
-            <div class="collapse" id="initial">
+            <div class="collapse bg-second-color p-3" id="initial">
                 <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1 mb-5">
                     <img class="img-thumbnail" src="/assets/alif_initial.png" alt="alif">
                     <img class="img-thumbnail" src="/assets/be_initial.png" alt="be">
@@ -160,7 +167,7 @@
 
             <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#medial" aria-expanded="false" aria-controls="medial">Medial Form</button>
 
-            <div class="collapse" id="medial">
+            <div class="collapse bg-second-color p-3" id="medial">
                 <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1 mb-5">
                     <img class="img-thumbnail" src="/assets/alif_medial.png" alt="alif">
                     <img class="img-thumbnail" src="/assets/be_medial.png" alt="be">
@@ -209,7 +216,7 @@
 
             <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#final" aria-expanded="false" aria-controls="final">Final Form</button>
 
-            <div class="collapse" id="final">
+            <div class="collapse bg-second-color p-3" id="final">
                 <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1">
                     <img class="img-thumbnail" src="/assets/alif_final.png" alt="alif">
                     <img class="img-thumbnail" src="/assets/be_final.png" alt="be">
