--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -265,7 +265,7 @@
                 </div>
             </div>
 
-            <div class="bg-second-color vh-100">
+            <div class="bg-second-color vh-100"></div>
 
         </div>
         
