Enhance table aesthetics

--- a/pashto/lessons/pronouns/index.html
+++ b/pashto/lessons/pronouns/index.html
@@ -59,7 +59,7 @@
 
                 <h2>Subject Pronouns</h2>
 
-                <table class="table">
+                <table class="table table-dark table-striped table-bordered table-hover">
                     <thead>
                         <tr>
                             <th scope="col">English</th>
