Enhance table aesthetics

--- a/pashto/lessons/pronouns/index.html
+++ b/pashto/lessons/pronouns/index.html
@@ -69,11 +69,11 @@
                     <tbody>
                         <tr>
                             <td>I</td>
-                            <td>زه</td>
+                            <td><span class="text-pashto">زه</span></td>
                         </tr>
                         <tr>
                             <td>You (singular)</td>
-                            <td>ته</td>
+                            <td><span class="text-pashto">ته</span></td>
                         </tr>
                         <tr>
                             <td>You (plural)</td>
