--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -67,7 +67,7 @@
 
             </div>
 
-            <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#isolated" aria-expanded="false" aria-controls="isolated">Isolated Form</button>
+            <button class="btn btn-primary d-block mb-2 ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#isolated" aria-expanded="false" aria-controls="isolated">Isolated Form</button>
 
             <div class="collapse bg-second-color p-3" id="isolated">
                 <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1 mb-5">
@@ -118,7 +118,7 @@
                 </div>
             </div>
 
-            <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#initial" aria-expanded="false" aria-controls="initial">Initial Form</button>
+            <button class="btn btn-primary d-block mb-2 ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#initial" aria-expanded="false" aria-controls="initial">Initial Form</button>
 
             <div class="collapse bg-second-color p-3" id="initial">
                 <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1 mb-5">
@@ -165,7 +165,7 @@
                 </div>
             </div>
 
-            <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#medial" aria-expanded="false" aria-controls="medial">Medial Form</button>
+            <button class="btn btn-primary d-block mb-2 ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#medial" aria-expanded="false" aria-controls="medial">Medial Form</button>
 
             <div class="collapse bg-second-color p-3" id="medial">
                 <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1 mb-5">
@@ -214,7 +214,7 @@
                 </div>
             </div>
 
-            <button class="btn btn-primary d-block mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#final" aria-expanded="false" aria-controls="final">Final Form</button>
+            <button class="btn btn-primary d-block mb-2 ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#final" aria-expanded="false" aria-controls="final">Final Form</button>
 
             <div class="collapse bg-second-color p-3" id="final">
                 <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1">
